# Database

./: CMakeLists.txt  Checker.cpp  Checker.h  Database.cpp  Database.h  Engine.cpp  Engine.h  Patterns.cpp  Patterns.h  README.md  Row.cpp  Row.h  Table.cpp  Table.h  main.cpp
